# Zorgster

./: .gitignore  CMakeLists.txt  README  README.md
cmake_modules/: FindSFML.cmake
src/: .clang_complete  Logger.cpp  Logger.hpp  Singleton.hpp  config.h  config.h.in  main.cpp
